--- a/platformio.ini
+++ b/platformio.ini
@@ -13,9 +13,10 @@ platform = espressif8266
 board = esp12e
 framework = arduino
 ; ESPWiFi_TrainController
-upload_port = 192.168.4.22
+;upload_port = 192.168.4.22
 ; wifi dalgatan
-;upload_port = 192.168.0.105
+upload_port = 192.168.0.160
 ;upload_port = 192.168.10.215
-;upload_port = COM8
+;upload_port = COM3
 lib_extra_dirs = C:\FilesSSD\Arduino_libs
+lib_extra_dirs = C:\Users\Tobias Gustafsson\Documents\Arduino\libraries
