--- a/platformio.ini
+++ b/platformio.ini
@@ -15,8 +15,8 @@ framework = arduino
 ; ESPWiFi_TrainController
 ;upload_port = 192.168.4.22
 ; wifi dalgatan
-upload_port = 192.168.0.160
-;upload_port = 192.168.10.215
-;upload_port = COM3
+;upload_port = 192.168.0.160
+;upload_port = 192.168.0.184
+upload_port = COM6
 lib_extra_dirs = C:\FilesSSD\Arduino_libs
 lib_extra_dirs = C:\Users\Tobias Gustafsson\Documents\Arduino\libraries
