--- a/platformio.ini
+++ b/platformio.ini
@@ -10,13 +10,26 @@
 
 [env:esp12e]
 platform = espressif8266
-board = esp12e
+board = d1_mini
 framework = arduino
 ; ESPWiFi_TrainController
 ;upload_port = 192.168.4.22
 ; wifi dalgatan
 ;upload_port = 192.168.0.160
-;upload_port = 192.168.0.184
-upload_port = COM6
-lib_extra_dirs = C:\FilesSSD\Arduino_libs
-lib_extra_dirs = C:\Users\Tobias Gustafsson\Documents\Arduino\libraries
+;upload_port = 192.168.7.121
+;upload_port = COM5
+;lib_extra_dirs = C:\FilesSSD\Arduino_libs
+;lib_extra_dirs = C:\Users\Tobias Gustafsson\Documents\Arduino\libraries
+
+[env:ota]
+platform = espressif8266
+board = d1_mini
+framework = arduino
+; ESPWiFi_TrainController
+;upload_port = 192.168.10.114
+; wifi dalgatan
+upload_port = 192.168.4.22
+;upload_port = 192.168.7.121
+;upload_port = COM5
+;lib_extra_dirs = C:\FilesSSD\Arduino_libs
+;lib_extra_dirs = C:\Users\Tobias Gustafsson\Documents\Arduino\libraries
