--- a/platformio.ini
+++ b/platformio.ini
@@ -8,10 +8,10 @@
 ; Please visit documentation for the other options and examples
 ; http://docs.platformio.org/page/projectconf.html
 
-[env:esp12e]
-platform = espressif8266
-board = d1_mini
-framework = arduino
+;[env:esp12e]
+;platform = espressif8266
+;board = d1_mini
+;framework = arduino
 ; ESPWiFi_TrainController
 ;upload_port = 192.168.4.22
 ; wifi dalgatan
@@ -21,14 +21,16 @@ framework = arduino
 ;lib_extra_dirs = C:\FilesSSD\Arduino_libs
 ;lib_extra_dirs = C:\Users\Tobias Gustafsson\Documents\Arduino\libraries
 
-[env:ota]
+[env:tg_esp]
+targets = upload
 platform = espressif8266
 board = d1_mini
 framework = arduino
+
+extra_scripts = pre:pio_pre_build_script.py
 ; ESPWiFi_TrainController
 ;upload_port = 192.168.4.22
 ; wifi dalgatan
-upload_port = 172.17.1.22
 ;upload_port = 192.168.7.121
 ;upload_port = COM5
 ;lib_extra_dirs = C:\FilesSSD\Arduino_libs
